@@ -55,6 +55,8 @@ unity (7.4.0+16.04.20160906-0ubuntu2) UNRELEASED; urgency=medium
     (LP: #1659847)
   * Dash: fix the neko regression we have since a couple of cycles (LP:
     #1680927)
+  * Panel: ensure the menu-manager tracker is updated to match monitor
+    (LP: #1671432)
 
  -- Marco Trevisan (Treviño) <mail@3v1n0.net>  Tue, 04 Jul 2017 18:12:47 +0200
 
